release: drop unsupported ducklake expressions